# lexxauto_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: ActuatorRequestPosition.msg  ActuatorStatus.msg  AgvLine.msg  AgvLineArray.msg  AttachmentRotateUnitStatus.msg  CarryingInformation.msg  CarryingStatus.msg  CmdVelControllerDebug.msg  CmdVelControllerSideState.msg  ComeInfo.msg  ConfigDetail.msg  DeviceStatus.msg  Dict.msg  DiffDriveEffortControllerDebug.msg  DiffDriveEffortControllerSideState.msg  EmergencyStopRequest.msg  ErrorCodes.msg  Errors.msg  GoalLink.msg  GoalLinkArray.msg  LightingRequest.msg  LocalizationReliability.msg  MagnetSensor.msg  MapArea.msg  MapAreaArray.msg  MaxVelocity.msg  Mode.msg  ModeInfo.msg  MotorTorque.msg  ObstacleInfo.msg  OdomCheckerStatus.msg  OperateElevator.msg  OrderInfo.msg  PGVLineInfo.msg  PGVLineInfos.msg  PoseWithId.msg  PoseWithIdArray.msg  RequestCharging.msg  RobotParameterEstimator.msg  RobotState.msg  (+12 more)
srv/: ApplyConfig.srv  FindRobot.srv  GetDetectArea.srv  GetOccupancy.srv  GoButton.srv  IsValidAGVScene.srv  LinearActuatorLocation.srv  LoadEstimate.srv  MakeObstacle.srv  MakeOrder.srv  ReloadVectorMap.srv  SetIdentity.srv  SetMapFile.srv  Sounds.srv
