<?xml version="1.0"?>
<package format="3">
  <name>lexxauto_msgs</name>
  <version>0.0.0</version>
  <description>custom messages defined for lexxauto.</description>

  <maintainer email="miura@todo.todo">miura</maintainer>

  <license>TODO</license>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
